@@ -1,3 +1,15 @@
+2010-08-17 Borut Razem <borut.razem AT siol.net>
+
+	* sdas/as8051/Makefile.in, sdas/asz80/Makefile.in,
+	  sdas/as6808/Makefile.in, sdas/asgb/Makefile.in:
+	  asnoice.c renamed to asdbg.c (sync with asxxxx)
+	* sdas/asxxsrc/asxxxx.h:
+	  DefineCDB_Line() renamed to DefineSDCC_Line() (sync with asxxxx)
+	* sdas/asxxsrc/asmain.c:
+	  DefineCDB_Line() renamed to DefineSDCC_Line() (sync with asxxxx)
+	* asxxsrc/asdbg.c: renamed from asxxsrc/asnoice.c,
+	  use dbuf to dynamically allocate debug symbol
+
 2010-08-16 Raphael Neider <rneider AT web.de>
 
 	* src/pic16/glue.c (pic16emitStaticSeg): allow extern declarations with
